# reinforcementLearning

./: .gitignore  .gitmodules  README.md  makefile_py  pyproject.toml
examples/tictactoe/: CMakeLists.txt  Makefile  build.sh  client.js  game.cpp  game.hpp  index.html  main.cpp  server.cpp
examples/tictactoe/content/src/: index.html
examples/tictactoe/src/: bindings.cpp  bindings.hpp  game.cpp  game.hpp  main.cpp  server.cpp  server.hpp  tracing.cpp  tracing.hpp
examples/tictactoe/test/: test.cpp
multi_armed_bandit/: CMakeLists.txt  bandit.hpp  bandit_python.cpp  bandit_python_object.cpp  bandit_run.cpp  doxyfile  installation.sh  makefile  setup.py  strategy.hpp
multi_armed_bandit/src/: bandit.hpp  bandit_run.cpp  exceptions.hpp  game.hpp  strategy.hpp
multi_armed_bandit/test/: main.cpp  strategy.cpp
reinfocement/: .clang-format  CMakeLists.txt
reinfocement/examples/: run_blackjack.cpp
reinfocement/src/: action.hpp  dummy_environment.hpp  environment.hpp  policy.hpp  returns.hpp  reward.hpp  spec.hpp  state.hpp  step.hpp  transition.hpp
reinfocement/src/bandit/: bandit.hpp  bandit_environment.hpp  bandit_policy.hpp  run_bandit.cpp
reinfocement/src/examples/: blackjack.hpp
reinfocement/src/markov_decision_process/: finite_state_value_function.hpp  finite_transition_model.hpp  policy_iteration.hpp  value_iteration.hpp
reinfocement/src/monte_carlo/: episode.hpp  exploring_starts.hpp  policy_control.hpp  value.hpp
reinfocement/src/monte_carlo/value_update/: average_return.hpp  ordinary_importance_sampling.hpp  value_update.hpp  weighted_importance_sampling.hpp
reinfocement/src/policy/: combination_policy.hpp  distribution_policy.hpp  epsilon_greedy_policy.hpp  greedy_policy.hpp  policy.hpp  random_policy.hpp  state_action_keymaker.hpp  state_action_value.hpp  step_size.hpp  value.hpp
reinfocement/src/policy/finite/: distribution_policy.hpp  epsilon_greedy_policy.hpp  greedy_policy.hpp  policy.hpp  random_policy.hpp  value_policy.hpp
reinfocement/src/policy/objectives/: finite_value.hpp  finite_value_function.hpp  finite_value_function_combination.hpp  finite_value_function_utilities.hpp  step_size.hpp  value.hpp  value_function.hpp  value_function_combination.hpp  value_function_keymaker.hpp  value_function_utilities.hpp
reinfocement/src/temporal_difference/: n_step.hpp  value_iteration.hpp
reinfocement/src/temporal_difference/value_update/: double_q_learning.hpp  expected_sarsa.hpp  q_learning.hpp  sarsa.hpp  td0_updater.hpp  value_update.hpp
reinfocement/src/temporal_difference/value_update/n_step/: n_step_sarsa.hpp  n_step_store.hpp  n_step_tree_backup.hpp  n_step_updater.hpp
reinfocement/src/utils/: tmp.hpp
reinfocement/test/: environment_fixtures.hpp  test_spec.cpp
reinfocement/test/examples/: test_blackjack.cpp
reinfocement/test/markov_decision_process/: coin_mdp.hpp  test_finite_transitino_model.cpp  test_policy_iteration.cpp  test_value_iteration.cpp
reinfocement/test/monte_carlo/: test_exploring_starts.cpp  test_policy_control.cpp  test_value.cpp
reinfocement/test/monte_carlo/value_update/: test_average_return.cpp  test_ordinary_importance_sampling.cpp  test_weighted_importance_sampling.cpp
reinfocement/test/policy/: test_value.cpp
reinfocement/test/policy/finite/: test_finite_distribution_policy.cpp  test_finite_greedy_policy.cpp  test_finite_random_policy.cpp
reinfocement/test/policy/objectives/: test_value_function_combination.cpp  test_value_function_keymaker.cpp
reinfocement/test/temporal_difference/: test_n_step.cpp  test_value_iteration.cpp
reinfocement/test/temporal_difference/value_update/: test_TD0Updater.cpp  test_double_q_learning.cpp  test_expected_sarsa.cpp  test_qlearning.cpp  test_sarsa.cpp
reinfocement/test/temporal_difference/value_update/n_step/: n_step_sarsa.cpp  n_step_tree_backup.cpp
reinforce/: CMakeLists.txt  Makefile  build.sh  test_main.cpp
reinforce/examples/bandit/: CMakeLists.txt
reinforce/examples/bandit/include/: bandit.hpp  bandit_environment.hpp  bandit_policy.hpp
reinforce/examples/bandit/src/: main.cpp
reinforce/examples/blackjack/: CMakeLists.txt
reinforce/examples/blackjack/include/: blackjack.hpp
reinforce/examples/blackjack/src/: main.cpp
reinforce/examples/blackjack/test/: test_blackjack.cpp
reinforce/examples/tictactoe/include/: tictactoe.hpp
reinforce/include/: CMakeLists.txt
reinforce/include/reinforce/: action.hpp  dummy_environment.hpp  environment.hpp  returns.hpp  reward.hpp  state.hpp  step.hpp  transition.hpp
reinforce/include/reinforce/markov_decision_process/: finite_transition_model.hpp  policy_iteration.hpp  value_iteration.hpp
reinforce/include/reinforce/monte_carlo/: episode.hpp  exploring_starts.hpp  policy_control.hpp  value.hpp
reinforce/include/reinforce/policy/: combination_policy.hpp  distribution_policy.hpp  epsilon_greedy_policy.hpp  greedy_policy.hpp  policy.hpp  random_policy.hpp  state_action_value.hpp  value.hpp
reinforce/include/reinforce/temporal_difference/: n_step.hpp  temporal_difference.hpp  value_iteration.hpp
reinforce/include/reinforce/utils/: tmp.hpp
reinforce/test/: environment_fixtures.hpp  test_spec.cpp
reinforce/test/markov_decision_process/: coin_mdp.hpp  test_finite_transition_model.cpp  test_policy_iteration.cpp  test_value_iteration.cpp
reinforce/test/monte_carlo/: test_exploring_starts.cpp  test_policy_control.cpp  test_value.cpp
reinforce/test/monte_carlo/value_update/: test_average_return.cpp  test_ordinary_importance_sampling.cpp  test_weighted_importance_sampling.cpp
reinforce/test/policy/: test_value.cpp
reinforce/test/policy/finite/: test_finite_distribution_policy.cpp  test_finite_greedy_policy.cpp  test_finite_random_policy.cpp
reinforce/test/policy/objectives/: test_value_function_combination.cpp  test_value_function_keymaker.cpp
reinforce/test/temporal_difference/: test_n_step.cpp  test_value_iteration.cpp
reinforce/test/temporal_difference/value_update/: test_TD0Updater.cpp  test_double_q_learning.cpp  test_expected_sarsa.cpp  test_qlearning.cpp  test_sarsa.cpp
(+35 files in other folders)
