[tool.poetry]
name = "reinfocementlearning"
version = "0.1.0"
description = "Working through reinforcement learning concepts"
authors = ["suvalaki"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
